--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.9.0",
     "react-mdl": "^1.11.0",
     "react-scripts": "3.1.0",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "react-split": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
