--- a/package.json
+++ b/package.json
@@ -6,20 +6,40 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^3.7.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.3.1",
+    "css-loader": "^3.5.3",
+    "express": "^4.17.1",
+    "fslightbox-react": "^1.6.2-2",
+    "imagesloaded": "^4.1.4",
+    "isotope-layout": "^3.0.6",
+    "masonry-layout": "^4.2.2",
+    "prism-react-renderer": "^1.1.1",
+    "prismjs": "^1.20.0",
+    "prop-types": "^15.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "https://github.com/motiejus1/react-bootstrap-contentclass.git",
-    "bootstrap": "^4.3.1"
+    "react-dom": "^18.2.0",
+    "react-isotope": "^1.0.7",
+    "react-masonry-layout": "^0.4.0",
+    "react-meta-tags": "^1.0.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "5.0.1",
+    "react-scroll": "^1.7.16",
+    "react-transition-group": "^4.4.1",
+    "react-visibility-sensor": "^5.1.1",
+    "simplebar": "^5.2.1",
+    "swiper": "^5.4.2",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
-
   },
   "eslintConfig": {
     "extends": [
